<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_main"
        android:background="@android:color/white"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/pixel_google"
            />

            <TextView
                    style="@style/TextContent.Small.White"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#4D000000"
                    android:drawableLeft="@drawable/ic_collections_white_18dp"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/_7_photos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
            />

        </FrameLayout>

        <TextView
                style="@style/TextContent.Black"
                android:textSize="35sp"
                android:text="@string/rp_3_500_000"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"
        />

        <TextView
                style="@style/TextContent.Subtitle"
                android:text="@string/stock_tersisa_7"
                android:layout_marginBottom="15dp"
        />

        <TextView
                style="@style/TextContent"
                android:text="@string/content_text"
                android:layout_marginBottom="15dp"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"
        />

        <TextView
                style="@style/TextContent.Subtitle"
                android:text="@string/spesifikasi"
                android:layout_marginBottom="7dp"
        />

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
        >
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
            >
                <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/display"
                />

                <TextView
                        style="@style/TextSpec.Value"
                        android:text="@string/content_specs_display"
                />

            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
            >
                <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/size"
                />
                <TextView
                        style="@style/TextSpec.Value"
                        android:text="@string/content_specs_size"
                />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
            >
                <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/battery"
                />

                <TextView
                        style="@style/TextSpec.Value"
                        android:text="@string/content_specs_battery"
                />
            </TableRow>

        </TableLayout>

        <TextView
                style="@style/TextContent.Subtitle"
                android:text="@string/dijual_oleh"
                android:layout_marginBottom="7dp"
        />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
        >
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/mine"
            />

            <TextView
                    style="@style/TextContent"
                    android:layout_toRightOf="@id/profile_image"
                    android:layout_toEndOf="@id/profile_image"
                    android:text="@string/nama_penjual"
                    android:textColor="@android:color/black"
            />

        </RelativeLayout>

        <Button
                android:text="@string/beli"
                style="@style/ButtonGeneral"
        />

    </LinearLayout>
    
</ScrollView>